[gd_scene load_steps=11 format=3 uid="uid://d0sfja0olm3ls"]

[ext_resource type="Script" path="res://Scripts/tank.gd" id="1_3h3ar"]
[ext_resource type="Texture2D" uid="uid://dx1mkphb8xqs1" path="res://assets/tank.png" id="1_d56pb"]
[ext_resource type="Texture2D" uid="uid://dw1q76wv0uw8b" path="res://assets/gear_cursor.png" id="3_7pd6f"]
[ext_resource type="Texture2D" uid="uid://deij0gnfkvgsn" path="res://assets/PIPE.png" id="4_d5gnc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gqn6"]
bg_color = Color(0.34902, 0.34902, 0.34902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r3uux"]
bg_color = Color(0, 0.627536, 0.988401, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_315go"]
size = Vector2(47, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ksop4"]
size = Vector2(72, 49)

[sub_resource type="CircleShape2D" id="CircleShape2D_18l8h"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tf2lb"]
radius = 14.0

[node name="tank" type="StaticBody2D" node_paths=PackedStringArray("level_bar", "suction_area") groups=["inlet", "outlet", "tank"]]
script = ExtResource("1_3h3ar")
level_bar = NodePath("ProgressBar")
suction_area = NodePath("suction_area")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 23.0
offset_top = 17.0
offset_right = 53.0
offset_bottom = 22.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_1gqn6")
theme_override_styles/fill = SubResource("StyleBoxFlat_r3uux")
value = 50.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4.5, 1.5)
shape = SubResource("RectangleShape2D_315go")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_d56pb")

[node name="Area2D" type="Area2D" parent="." groups=["inlet", "outlet", "tank"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["inlet", "outlet"]]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_ksop4")

[node name="suction_area" type="Area2D" parent="."]

[node name="suction" type="RigidBody2D" parent="suction_area"]
position = Vector2(46, 4)
collision_layer = 8
collision_mask = 8
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="suction_area/suction"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_18l8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="suction_area"]
position = Vector2(47, 2)
shape = SubResource("CircleShape2D_tf2lb")

[node name="BuildingCursor" type="Sprite2D" parent="suction_area/CollisionShape2D"]
position = Vector2(-1, 1)
scale = Vector2(1.75, 1.75)
texture = ExtResource("3_7pd6f")

[node name="Line2D" type="Line2D" parent="suction_area"]
position = Vector2(18, -32)
points = PackedVector2Array(28, 35, 22, 35, 17, 36, 11, 37)
width = 1.0
texture = ExtResource("4_d5gnc")
texture_mode = 1

[node name="PinJoint2D" type="PinJoint2D" parent="suction_area"]
position = Vector2(46, 3)
node_a = NodePath("../suction")
node_b = NodePath("../..")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="body_entered" from="suction_area" to="." method="_on_suction_area_body_entered"]
[connection signal="body_exited" from="suction_area" to="." method="_on_suction_area_body_exited"]
[connection signal="mouse_entered" from="suction_area" to="." method="_on_area_2d_2_mouse_entered"]
[connection signal="mouse_exited" from="suction_area" to="." method="_on_area_2d_2_mouse_exited"]
